--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 :root {
   font-family: "Montserrat", system-ui;
   color-scheme: light dark;
@@ -22,7 +24,7 @@ html {
   font-size: 14px;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
