--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -55,6 +55,11 @@ h1, h2, h3, h4, h5, h6, p{
   font-size: 20px;
 }
 
+.text-lg-bold {
+  font-size: 20px;
+  font-weight: 600;
+}
+
 .text {
   font-size: 18px;
   line-height: 25px;
